compiler/test/type_check/bad_prev.expect
type_check: error: bad_prev.c2po:5: Invalid operands for 'prev', must be of same type (found 'float' and 'bool')
	prev(0.0,b1)
type_check: error: bad_prev.c2po:6: Invalid initial value for 'prev', must be of constant type (found 'b0')
	prev(b0,b1)
type_check: error: bad_prev.c2po:7: Invalid nested previous statements, (prev(False,b1)).
	prev(False,prev(False,b1))
